# cthulhu

./: .gitignore  .gitmodules  Cthulhu.code-workspace  README.md
app/: .babelrc  package-lock.json  package.json  postcss.config.js  serve.ts  tsconfig.json  types.d.ts  webpack.config.js
app/public/: aakara.js  aakara.wasm  aakara.worker.js  cthulhu.js  index.html
app/src/: app.tsx  index.css  index.tsx
wasm/: .clang-format  .gitmodules  CMakeLists.txt  README.MD
wasm/assets/shaders/: base.frag  shadow.vert  skybox.frag  skybox.vert  standard.frag  standard.vert
wasm/include/: stbi_image.h  thread_pool.h  utils.h  uuid.hpp  zstr.hpp
wasm/include/aakara/: App.hpp  Camera.hpp  Global.hpp  Lights.hpp  Material.hpp  Mesh.hpp  OrbitCamera.hpp  Part.hpp  Renderer.hpp  Scene.hpp  SceneObject.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  Transform.hpp  fetch.hpp
wasm/include/cthulhu/: App.hpp  MeshCollider.hpp  MeshSimplifier.hpp  Occlusion.hpp  Ray.hpp  Scene.hpp
wasm/src/: CMakeLists.txt
wasm/src/aakara/: App.cpp  CMakeLists.txt  Camera.cpp  Global.cpp  Lights.cpp  Material.cpp  Mesh.cpp  OrbitCamera.cpp  Part.cpp  Renderer.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Transform.cpp  fetch.cpp  program.cpp
wasm/src/aakara/pipeline/: ISystem.hpp  RenderPipeline.cpp  RenderPipeline.hpp  RenderSystem.cpp  RenderSystem.hpp
wasm/src/cthulhu/: App.cpp  CMakeLists.txt  MeshCollider.cpp  MeshSimplifier.cpp  Occlusion.cpp  OrbitCamera.cpp  Part.cpp  Ray.cpp  Scene.cpp
wasm/vendors/: CMakeLists.txt
